@@ -3,62 +3,61 @@
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/.
- *
+ * SPDX-License-Identifier: MPL-2.0
  */
-
 package com.powsybl.metrix.mapping;
 
 import com.fasterxml.jackson.core.JsonGenerator;
 import com.fasterxml.jackson.core.JsonParser;
 import com.fasterxml.jackson.core.JsonToken;
-import com.google.common.collect.ImmutableSet;
+import com.powsybl.metrix.commons.MappingVariable;
 
 import java.io.IOException;
 import java.io.UncheckedIOException;
-import java.util.EnumSet;
-import java.util.HashSet;
-import java.util.Objects;
-import java.util.Set;
+import java.util.*;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 
+/**
+ * @author Paul Bui-Quang {@literal <paul.buiquang at rte-france.com>}
+ */
 public enum EquipmentVariable implements MappingVariable {
-    targetP("targetP"),
-    targetQ("targetQ"),
-    minP("minP"),
-    maxP("maxP"),
-    p0("p0"),
-    q0("q0"),
-    fixedActivePower("fixedActivePower"),
-    variableActivePower("variableActivePower"),
-    fixedReactivePower("fixedReactivePower"),
-    variableReactivePower("variableReactivePower"),
-    activePowerSetpoint("activePowerSetpoint"),
-    open("open"),
-    phaseTapPosition("phaseTapPosition"),
-    ratioTapPosition("ratioTapPosition"),
-    voltageRegulatorOn("voltageRegulatorOn"),
-    targetV("targetV"),
-    nominalV("nominalV"),
-    regulationMode("regulationMode"),
-    ratedU1("ratedU1"),
-    ratedU2("ratedU2"),
-    loadTapChangingCapabilities("loadTapChangingCapabilities"),
-    phaseRegulating("phaseRegulating"),
-    ratioRegulating("ratioRegulating"),
-    voltageSetpoint("voltageSetpoint"),
-    reactivePowerSetpoint("reactivePowerSetpoint"),
-    powerFactor("powerFactor"),
-    disconnected("disconnected"),
-    targetDeadband("targetDeadband");
+    TARGET_P("targetP"),
+    TARGET_Q("targetQ"),
+    MIN_P("minP"),
+    MAX_P("maxP"),
+    P0("p0"),
+    Q0("q0"),
+    FIXED_ACTIVE_POWER("fixedActivePower"),
+    VARIABLE_ACTIVE_POWER("variableActivePower"),
+    FIXED_REACTIVE_POWER("fixedReactivePower"),
+    VARIABLE_REACTIVE_POWER("variableReactivePower"),
+    ACTIVE_POWER_SETPOINT("activePowerSetpoint"),
+    OPEN("open"),
+    PHASE_TAP_POSITION("phaseTapPosition"),
+    RATIO_TAP_POSITION("ratioTapPosition"),
+    VOLTAGE_REGULATOR_ON("voltageRegulatorOn"),
+    TARGET_V("targetV"),
+    NOMINAL_V("nominalV"),
+    REGULATION_MODE("regulationMode"),
+    RATED_U1("ratedU1"),
+    RATED_U2("ratedU2"),
+    LOAD_TAP_CHANGING_CAPABILITIES("loadTapChangingCapabilities"),
+    PHASE_REGULATING("phaseRegulating"),
+    RATIO_REGULATING("ratioRegulating"),
+    VOLTAGE_SETPOINT("voltageSetpoint"),
+    REACTIVE_POWER_SETPOINT("reactivePowerSetpoint"),
+    POWER_FACTOR("powerFactor"),
+    DISCONNECTED("disconnected"),
+    TARGET_DEADBAND("targetDeadband");
 
-    private static final String NAME = "equipment";
+    static final String NAME = "equipment";
 
-    static String getName() {
-        return NAME;
-    }
+    private static final Map<String, EquipmentVariable> NAME_TO_VARIABLE = Arrays.stream(EquipmentVariable.values()).collect(Collectors.toMap(EquipmentVariable::toString, Function.identity()));
 
     @Override
     public String getFieldName() {
-        return getName();
+        return NAME;
     }
 
     static void writeJson(EquipmentVariable variable, JsonGenerator generator) throws IOException {
@@ -66,18 +65,23 @@ public enum EquipmentVariable implements MappingVariable {
         try {
             generator.writeStartObject();
             generator.writeFieldName(variable.getFieldName());
-            generator.writeString(variable.name());
+            generator.writeString(variable.getVariableName());
             generator.writeEndObject();
         } catch (IOException e) {
             throw new UncheckedIOException(e);
         }
     }
 
+    @Override
+    public String toString() {
+        return getVariableName();
+    }
+
     static MappingVariable parseJson(JsonParser parser) throws IOException {
         JsonToken token = parser.nextToken();
         if (token != null) {
             if (token == JsonToken.VALUE_STRING) {
-                return EquipmentVariable.valueOf(parser.getValueAsString());
+                return EquipmentVariable.fromString(parser.getValueAsString());
             } else {
                 throw new IllegalStateException("Unexpected JSON token: " + token);
             }
@@ -85,40 +89,40 @@ public enum EquipmentVariable implements MappingVariable {
         throw new IllegalStateException("Invalid EquipmentVariable JSON");
     }
 
-    private static final Set<EquipmentVariable> GENERATOR_VARIABLES = EnumSet.of(EquipmentVariable.targetP,
-                                                                                 EquipmentVariable.targetQ,
-                                                                                 EquipmentVariable.minP,
-                                                                                 EquipmentVariable.maxP,
-                                                                                 EquipmentVariable.voltageRegulatorOn,
-                                                                                 EquipmentVariable.targetV,
-                                                                                 EquipmentVariable.disconnected);
-    private static final Set<EquipmentVariable> HVDC_LINE_VARIABLES = EnumSet.of(EquipmentVariable.activePowerSetpoint,
-                                                                                 EquipmentVariable.minP,
-                                                                                 EquipmentVariable.maxP,
-                                                                                 EquipmentVariable.nominalV);
-    private static final Set<EquipmentVariable> LOAD_VARIABLES = EnumSet.of(EquipmentVariable.p0,
-                                                                            EquipmentVariable.q0,
-                                                                            EquipmentVariable.fixedActivePower,
-                                                                            EquipmentVariable.variableActivePower,
-                                                                            EquipmentVariable.fixedReactivePower,
-                                                                            EquipmentVariable.variableReactivePower);
-    private static final Set<EquipmentVariable> PHASE_TAP_CHANGER_VARIABLES = EnumSet.of(EquipmentVariable.phaseTapPosition,
-                                                                                         EquipmentVariable.phaseRegulating,
-                                                                                         EquipmentVariable.regulationMode,
-                                                                                         EquipmentVariable.targetDeadband);
-    private static final Set<EquipmentVariable> TWO_WINDINGS_TRANSFORMER_VARIABLES = EnumSet.of(EquipmentVariable.ratedU1,
-                                                                                                EquipmentVariable.ratedU2,
-                                                                                                EquipmentVariable.disconnected);
-    private static final Set<EquipmentVariable> RATIO_TAP_CHANGER_VARIABLES = EnumSet.of(EquipmentVariable.ratioTapPosition,
-                                                                                         EquipmentVariable.loadTapChangingCapabilities,
-                                                                                         EquipmentVariable.ratioRegulating,
-                                                                                         EquipmentVariable.targetV);
-    private static final Set<EquipmentVariable> LCC_CONVERTER_VARIABLES = EnumSet.of(EquipmentVariable.powerFactor);
-    private static final Set<EquipmentVariable> VSC_CONVERTER_VARIABLES = EnumSet.of(EquipmentVariable.voltageRegulatorOn,
-                                                                                     EquipmentVariable.voltageSetpoint,
-                                                                                     EquipmentVariable.reactivePowerSetpoint);
+    private static final Set<EquipmentVariable> GENERATOR_VARIABLES = EnumSet.of(EquipmentVariable.TARGET_P,
+                                                                                 EquipmentVariable.TARGET_Q,
+                                                                                 EquipmentVariable.MIN_P,
+                                                                                 EquipmentVariable.MAX_P,
+                                                                                 EquipmentVariable.VOLTAGE_REGULATOR_ON,
+                                                                                 EquipmentVariable.TARGET_V,
+                                                                                 EquipmentVariable.DISCONNECTED);
+    private static final Set<EquipmentVariable> HVDC_LINE_VARIABLES = EnumSet.of(EquipmentVariable.ACTIVE_POWER_SETPOINT,
+                                                                                 EquipmentVariable.MIN_P,
+                                                                                 EquipmentVariable.MAX_P,
+                                                                                 EquipmentVariable.NOMINAL_V);
+    private static final Set<EquipmentVariable> LOAD_VARIABLES = EnumSet.of(EquipmentVariable.P0,
+                                                                            EquipmentVariable.Q0,
+                                                                            EquipmentVariable.FIXED_ACTIVE_POWER,
+                                                                            EquipmentVariable.VARIABLE_ACTIVE_POWER,
+                                                                            EquipmentVariable.FIXED_REACTIVE_POWER,
+                                                                            EquipmentVariable.VARIABLE_REACTIVE_POWER);
+    private static final Set<EquipmentVariable> PHASE_TAP_CHANGER_VARIABLES = EnumSet.of(EquipmentVariable.PHASE_TAP_POSITION,
+                                                                                         EquipmentVariable.PHASE_REGULATING,
+                                                                                         EquipmentVariable.REGULATION_MODE,
+                                                                                         EquipmentVariable.TARGET_DEADBAND);
+    private static final Set<EquipmentVariable> TWO_WINDINGS_TRANSFORMER_VARIABLES = EnumSet.of(EquipmentVariable.RATED_U1,
+                                                                                                EquipmentVariable.RATED_U2,
+                                                                                                EquipmentVariable.DISCONNECTED);
+    private static final Set<EquipmentVariable> RATIO_TAP_CHANGER_VARIABLES = EnumSet.of(EquipmentVariable.RATIO_TAP_POSITION,
+                                                                                         EquipmentVariable.LOAD_TAP_CHANGING_CAPABILITIES,
+                                                                                         EquipmentVariable.RATIO_REGULATING,
+                                                                                         EquipmentVariable.TARGET_V);
+    private static final Set<EquipmentVariable> LCC_CONVERTER_VARIABLES = EnumSet.of(EquipmentVariable.POWER_FACTOR);
+    private static final Set<EquipmentVariable> VSC_CONVERTER_VARIABLES = EnumSet.of(EquipmentVariable.VOLTAGE_REGULATOR_ON,
+                                                                                     EquipmentVariable.VOLTAGE_SETPOINT,
+                                                                                     EquipmentVariable.REACTIVE_POWER_SETPOINT);
 
-    private static final Set<EquipmentVariable> LINE_VARIABLES = EnumSet.of(EquipmentVariable.disconnected);
+    private static final Set<EquipmentVariable> LINE_VARIABLES = EnumSet.of(EquipmentVariable.DISCONNECTED);
 
     private final String variable;
 
@@ -131,82 +135,54 @@ public enum EquipmentVariable implements MappingVariable {
         return variable;
     }
 
+    public static EquipmentVariable fromString(String variable) {
+        return NAME_TO_VARIABLE.get(variable);
+    }
+
     public static EquipmentVariable getByDefaultVariable(MappableEquipmentType equipmentType) {
-        switch (equipmentType) {
-            case GENERATOR:
-                return EquipmentVariable.targetP;
-            case HVDC_LINE:
-                return EquipmentVariable.activePowerSetpoint;
-            case LOAD:
-            case BOUNDARY_LINE:
-                return EquipmentVariable.p0;
-            case SWITCH:
-                return EquipmentVariable.open;
-            case PHASE_TAP_CHANGER:
-                return EquipmentVariable.phaseTapPosition;
-            case RATIO_TAP_CHANGER:
-                return EquipmentVariable.ratioTapPosition;
-            case LCC_CONVERTER_STATION:
-                return EquipmentVariable.powerFactor;
-            case VSC_CONVERTER_STATION:
-                return EquipmentVariable.voltageSetpoint;
-            default:
-                throw new AssertionError("Unsupported equipment type " + equipmentType);
-        }
+        return switch (equipmentType) {
+            case GENERATOR -> EquipmentVariable.TARGET_P;
+            case HVDC_LINE -> EquipmentVariable.ACTIVE_POWER_SETPOINT;
+            case LOAD, BOUNDARY_LINE -> EquipmentVariable.P0;
+            case SWITCH -> EquipmentVariable.OPEN;
+            case PHASE_TAP_CHANGER -> EquipmentVariable.PHASE_TAP_POSITION;
+            case RATIO_TAP_CHANGER -> EquipmentVariable.RATIO_TAP_POSITION;
+            case LCC_CONVERTER_STATION -> EquipmentVariable.POWER_FACTOR;
+            case VSC_CONVERTER_STATION -> EquipmentVariable.VOLTAGE_SETPOINT;
+            case TRANSFORMER, LINE -> EquipmentVariable.DISCONNECTED;
+        };
     }
 
     public static Set<EquipmentVariable> getByDefaultVariables(MappableEquipmentType equipmentType) {
         Set<EquipmentVariable> equipmentVariables = new HashSet<>();
         equipmentVariables.add(getByDefaultVariable(equipmentType));
         if (equipmentType == MappableEquipmentType.LOAD) {
-            equipmentVariables.add(EquipmentVariable.fixedActivePower);
-            equipmentVariables.add(EquipmentVariable.variableActivePower);
+            equipmentVariables.add(EquipmentVariable.FIXED_ACTIVE_POWER);
+            equipmentVariables.add(EquipmentVariable.VARIABLE_ACTIVE_POWER);
         }
         return equipmentVariables;
     }
 
+    public static boolean isVariableCompatible(MappableEquipmentType equipmentType, EquipmentVariable equipmentVariable) {
+        return switch (equipmentType) {
+            case GENERATOR -> GENERATOR_VARIABLES.contains(equipmentVariable);
+            case HVDC_LINE -> HVDC_LINE_VARIABLES.contains(equipmentVariable);
+            case LOAD -> LOAD_VARIABLES.contains(equipmentVariable);
+            case BOUNDARY_LINE -> equipmentVariable == EquipmentVariable.P0;
+            case SWITCH -> equipmentVariable == EquipmentVariable.OPEN;
+            case PHASE_TAP_CHANGER -> PHASE_TAP_CHANGER_VARIABLES.contains(equipmentVariable);
+            case TRANSFORMER -> TWO_WINDINGS_TRANSFORMER_VARIABLES.contains(equipmentVariable);
+            case RATIO_TAP_CHANGER -> RATIO_TAP_CHANGER_VARIABLES.contains(equipmentVariable);
+            case LCC_CONVERTER_STATION -> LCC_CONVERTER_VARIABLES.contains(equipmentVariable);
+            case VSC_CONVERTER_STATION -> VSC_CONVERTER_VARIABLES.contains(equipmentVariable);
+            case LINE -> LINE_VARIABLES.contains(equipmentVariable);
+        };
+    }
+
     public static void checkVariableCompatibility(MappableEquipmentType equipmentType, EquipmentVariable equipmentVariable) {
         Objects.requireNonNull(equipmentType);
-        boolean compatible;
-        switch (equipmentType) {
-            case GENERATOR:
-                compatible = GENERATOR_VARIABLES.contains(equipmentVariable);
-                break;
-            case HVDC_LINE:
-                compatible = HVDC_LINE_VARIABLES.contains(equipmentVariable);
-                break;
-            case LOAD:
-                compatible = LOAD_VARIABLES.contains(equipmentVariable);
-                break;
-            case BOUNDARY_LINE:
-                compatible = equipmentVariable == EquipmentVariable.p0;
-                break;
-            case SWITCH:
-                compatible = equipmentVariable == EquipmentVariable.open;
-                break;
-            case PHASE_TAP_CHANGER:
-            case PST:
-                compatible = PHASE_TAP_CHANGER_VARIABLES.contains(equipmentVariable);
-                break;
-            case TRANSFORMER:
-                compatible = TWO_WINDINGS_TRANSFORMER_VARIABLES.contains(equipmentVariable);
-                break;
-            case RATIO_TAP_CHANGER:
-                compatible = RATIO_TAP_CHANGER_VARIABLES.contains(equipmentVariable);
-                break;
-            case LCC_CONVERTER_STATION:
-                compatible = LCC_CONVERTER_VARIABLES.contains(equipmentVariable);
-                break;
-            case VSC_CONVERTER_STATION:
-                compatible = VSC_CONVERTER_VARIABLES.contains(equipmentVariable);
-                break;
-            case LINE:
-                compatible = LINE_VARIABLES.contains(equipmentVariable);
-                break;
-            default:
-                throw new AssertionError("Unsupported equipment type " + equipmentType);
-        }
-        if (!compatible) {
+        Objects.requireNonNull(equipmentVariable);
+        if (!isVariableCompatible(equipmentType, equipmentVariable)) {
             throw new AssertionError("Variable type " + equipmentVariable + " not compatible with equipment type " + equipmentType);
         }
     }
@@ -216,7 +192,7 @@ public enum EquipmentVariable implements MappingVariable {
         if (equipmentVariable == null) {
             return getByDefaultVariable(equipmentType);
         } else {
-            Set<EquipmentVariable> equipmentVariables = check(equipmentType, ImmutableSet.of(equipmentVariable));
+            Set<EquipmentVariable> equipmentVariables = check(equipmentType, Set.of(equipmentVariable));
             return equipmentVariables.iterator().next();
         }
     }
