@@ -3,9 +3,8 @@
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/.
- *
+ * SPDX-License-Identifier: MPL-2.0
  */
-
 package com.powsybl.metrix.tools;
 
 import com.google.auto.service.AutoService;
@@ -13,16 +12,20 @@ import com.google.common.base.Stopwatch;
 import com.powsybl.contingency.ContingenciesProvider;
 import com.powsybl.contingency.EmptyContingencyListProvider;
 import com.powsybl.contingency.dsl.GroovyDslContingenciesProvider;
-import com.powsybl.iidm.import_.ImportConfig;
-import com.powsybl.iidm.import_.Importers;
+import com.powsybl.iidm.network.ImportConfig;
 import com.powsybl.iidm.network.Network;
-import com.powsybl.metrix.integration.*;
+import com.powsybl.metrix.integration.Metrix;
+import com.powsybl.metrix.integration.MetrixAppLogger;
+import com.powsybl.metrix.integration.configuration.MetrixRunParameters;
+import com.powsybl.metrix.integration.network.NetworkSource;
 import com.powsybl.metrix.integration.compatibility.CsvResultListener;
-import com.powsybl.metrix.integration.metrix.MetrixAnalysis;
-import com.powsybl.metrix.integration.metrix.MetrixAnalysisResult;
-import com.powsybl.metrix.mapping.ComputationRange;
-import com.powsybl.metrix.mapping.timeseries.FileSystemTimeseriesStore;
-import com.powsybl.metrix.mapping.timeseries.InMemoryTimeSeriesStore;
+import com.powsybl.metrix.integration.analysis.MetrixAnalysis;
+import com.powsybl.metrix.integration.analysis.MetrixAnalysisResult;
+import com.powsybl.metrix.commons.ComputationRange;
+import com.powsybl.metrix.commons.data.datatable.DataTableStore;
+import com.powsybl.metrix.mapping.TimeSeriesDslLoader;
+import com.powsybl.metrix.commons.data.timeseries.FileSystemTimeSeriesStore;
+import com.powsybl.metrix.commons.data.timeseries.InMemoryTimeSeriesStore;
 import com.powsybl.tools.Command;
 import com.powsybl.tools.Tool;
 import com.powsybl.tools.ToolRunningContext;
@@ -31,7 +34,10 @@ import org.apache.commons.cli.Option;
 import org.apache.commons.cli.Options;
 import org.apache.commons.io.IOUtils;
 
-import java.io.*;
+import java.io.IOException;
+import java.io.OutputStream;
+import java.io.Reader;
+import java.io.UncheckedIOException;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
@@ -44,8 +50,20 @@ import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 import java.util.zip.ZipOutputStream;
 
+/**
+ * @author Paul Bui-Quang {@literal <paul.buiquang at rte-france.com>}
+ */
 @AutoService(Tool.class)
 public class MetrixTool implements Tool {
+
+    private static final String CONTINGENCIES_FILE = "contingencies-file";
+    private static final String METRIX_DSL_FILE = "metrix-dsl-file";
+    private static final String REMEDIAL_ACTIONS_FILE = "remedial-actions-file";
+    private static final String FIRST_VARIANT = "first-variant";
+    private static final String VARIANT_COUNT = "variant-count";
+    private static final String CSV_RESULTS_FILE = "csv-results-file";
+    private static final String CHUNK_SIZE = "chunk-size";
+    private static final String LOG_ARCHIVE = "log-archive";
 
     @Override
     public Command getCommand() {
@@ -83,19 +101,19 @@ public class MetrixTool implements Tool {
                         .required()
                         .build());
                 options.addOption(Option.builder()
-                        .longOpt("contingencies-file")
+                        .longOpt(CONTINGENCIES_FILE)
                         .desc("Groovy DSL file that describes contingencies")
                         .hasArg()
                         .argName("FILE")
                         .build());
                 options.addOption(Option.builder()
-                        .longOpt("metrix-dsl-file")
+                        .longOpt(METRIX_DSL_FILE)
                         .desc("Groovy DSL file that describes the branch monitoring and the phase shifter actions")
                         .hasArg()
                         .argName("FILE")
                         .build());
                 options.addOption(Option.builder()
-                        .longOpt("remedial-actions-file")
+                        .longOpt(REMEDIAL_ACTIONS_FILE)
                         .desc("Name of the remedial actions file")
                         .hasArg()
                         .argName("FILE")
@@ -115,13 +133,13 @@ public class MetrixTool implements Tool {
                         .required()
                         .build());
                 options.addOption(Option.builder()
-                        .longOpt("first-variant")
+                        .longOpt(FIRST_VARIANT)
                         .desc("first variant to simulate")
                         .hasArg()
                         .argName("NUM")
                         .build());
                 options.addOption(Option.builder()
-                        .longOpt("variant-count")
+                        .longOpt(VARIANT_COUNT)
                         .desc("number of variants simulated")
                         .hasArg()
                         .argName("COUNT")
@@ -135,28 +153,30 @@ public class MetrixTool implements Tool {
                         .desc("ignore empty filter with non zero time series value")
                         .build());
                 options.addOption(Option.builder()
-                        .longOpt("csv-results-file")
+                        .longOpt(CSV_RESULTS_FILE)
                         .desc("CSV file results")
                         .hasArg()
                         .argName("FILE")
                         .build());
                 options.addOption(Option.builder()
-                        .longOpt("chunk-size")
+                        .longOpt(CHUNK_SIZE)
                         .desc("chunk size")
                         .hasArg()
                         .argName("SIZE")
                         .build());
                 options.addOption(Option.builder()
-                        .longOpt("log-archive")
+                        .longOpt(LOG_ARCHIVE)
                         .hasArg()
                         .argName("FILE")
                         .desc("name of gzip file containing execution logs")
                         .build());
                 options.addOption(Option.builder()
-                        .longOpt("network-point-file")
-                        .desc("output network point file")
-                        .hasArg()
-                        .argName("FILE")
+                        .longOpt("write-ptdf")
+                        .desc("write ptdf matrix")
+                        .build());
+                options.addOption(Option.builder()
+                        .longOpt("write-lodf")
+                        .desc("write lodf matrix")
                         .build());
                 return options;
             }
@@ -169,13 +189,13 @@ public class MetrixTool implements Tool {
     }
 
     private static ZipOutputStream createLogArchive(CommandLine line, ToolRunningContext context, TreeSet<Integer> versions) {
-        if (line.hasOption("log-archive")) {
+        if (line.hasOption(LOG_ARCHIVE)) {
 
             if (versions.size() > 1) {
                 throw new IllegalArgumentException("Log archive option can only be used with a single version");
             }
 
-            String logfileName = line.getOptionValue("log-archive");
+            String logfileName = line.getOptionValue(LOG_ARCHIVE);
             if (!logfileName.endsWith(".zip")) {
                 logfileName += ".zip";
             }
@@ -189,30 +209,42 @@ public class MetrixTool implements Tool {
         return null;
     }
 
+    private Path getCsvResultsFilePath(CommandLine line, ToolRunningContext context) {
+        if (line.hasOption(CSV_RESULTS_FILE)) {
+            String csvResultsFile = line.getOptionValue(CSV_RESULTS_FILE);
+            if (!csvResultsFile.endsWith(".gz")) {
+                csvResultsFile += ".gz";
+            }
+            return context.getFileSystem().getPath(csvResultsFile);
+        } else {
+            return null;
+        }
+    }
+
     @Override
     public void run(CommandLine line, ToolRunningContext context) throws IOException {
         Path caseFile = context.getFileSystem().getPath(line.getOptionValue("case-file"));
 
         Path mappingFile = context.getFileSystem().getPath(line.getOptionValue("mapping-file"));
 
-        Path contingenciesFile = line.hasOption("contingencies-file")
-                ? context.getFileSystem().getPath(line.getOptionValue("contingencies-file"))
+        Path contingenciesFile = line.hasOption(CONTINGENCIES_FILE)
+                ? context.getFileSystem().getPath(line.getOptionValue(CONTINGENCIES_FILE))
                 : null;
 
-        Path metrixDslFile = line.hasOption("metrix-dsl-file")
-                ? context.getFileSystem().getPath(line.getOptionValue("metrix-dsl-file"))
+        Path metrixDslFile = line.hasOption(METRIX_DSL_FILE)
+                ? context.getFileSystem().getPath(line.getOptionValue(METRIX_DSL_FILE))
                 : null;
 
-        Path remedialActionsFile = line.hasOption("remedial-actions-file") ?
-                context.getFileSystem().getPath(line.getOptionValue("remedial-actions-file"))
+        Path remedialActionsFile = line.hasOption(REMEDIAL_ACTIONS_FILE) ?
+                context.getFileSystem().getPath(line.getOptionValue(REMEDIAL_ACTIONS_FILE))
                 : null;
 
         boolean ignoreLimits = line.hasOption("ignore-limits");
         boolean ignoreEmptyFilter = line.hasOption("ignore-empty-filter");
 
-        List<String> tsCsvs = Arrays.stream(line.getOptionValue("time-series").split(",")).map(String::valueOf).collect(Collectors.toList());
+        List<String> tsCsvs = Arrays.stream(line.getOptionValue("time-series").split(",")).map(String::valueOf).toList();
 
-        int chunkSize = line.hasOption("chunk-size") ? Integer.parseInt(line.getOptionValue("chunk-size")) : -1;
+        int chunkSize = line.hasOption(CHUNK_SIZE) ? Integer.parseInt(line.getOptionValue(CHUNK_SIZE)) : -1;
 
         TreeSet<Integer> versions = Arrays.stream(line.getOptionValue("versions").split(","))
                 .map(Integer::valueOf)
@@ -221,19 +253,10 @@ public class MetrixTool implements Tool {
             throw new IllegalArgumentException("Empty version list");
         }
 
-        final Path csvResultFilePath;
-        if (line.hasOption("csv-results-file")) {
-            String csvResultsFile = line.getOptionValue("csv-results-file");
-            if (!csvResultsFile.endsWith(".gz")) {
-                csvResultsFile += ".gz";
-            }
-            csvResultFilePath = context.getFileSystem().getPath(csvResultsFile);
-        } else {
-            csvResultFilePath = null;
-        }
+        final Path csvResultFilePath = getCsvResultsFilePath(line, context);
 
         InMemoryTimeSeriesStore store = new InMemoryTimeSeriesStore();
-        store.importTimeSeries(tsCsvs.stream().map(context.getFileSystem()::getPath).collect(Collectors.toList()));
+        store.importTimeSeries(tsCsvs.stream().map(context.getFileSystem()::getPath).toList());
 
         MetrixAppLogger logger = new MetrixAppLogger() {
             private String tag = "INFO";
@@ -241,7 +264,8 @@ public class MetrixTool implements Tool {
             @Override
             public void log(String message, Object... args) {
                 try {
-                    IOUtils.write(String.format(tag + "\t" + message + "\n", args), context.getOutputStream(), Charset.defaultCharset());
+                    String stringToFormat = tag + "\t" + message + "\n";
+                    IOUtils.write(String.format(stringToFormat, args), context.getOutputStream(), Charset.defaultCharset());
                 } catch (IOException e) {
                     throw new UncheckedIOException(e);
                 }
@@ -259,13 +283,13 @@ public class MetrixTool implements Tool {
         Stopwatch stopwatch = Stopwatch.createStarted();
 
         // define variant range to compute
-        int firstVariant = line.hasOption("first-variant") ? Integer.parseInt(line.getOptionValue("first-variant")) : 0;
-        int variantCount = line.hasOption("variant-count") ? Integer.parseInt(line.getOptionValue("variant-count")) : -1;
+        int firstVariant = line.hasOption(FIRST_VARIANT) ? Integer.parseInt(line.getOptionValue(FIRST_VARIANT)) : 0;
+        int variantCount = line.hasOption(VARIANT_COUNT) ? Integer.parseInt(line.getOptionValue(VARIANT_COUNT)) : -1;
 
         NetworkSource networkSource = getNetworkSource(context, caseFile, logger);
         Reader mappingReader = getReader(mappingFile);
 
-        ContingenciesProvider contingenciesProvider = null;
+        ContingenciesProvider contingenciesProvider;
         if (contingenciesFile != null) {
             contingenciesProvider = new GroovyDslContingenciesProvider(contingenciesFile);
         } else {
@@ -276,17 +300,18 @@ public class MetrixTool implements Tool {
         Reader remedialActionsReaderForAnalysis = getReader(remedialActionsFile);
         Reader remedialActionsReaderForRun = getReader(remedialActionsFile);
 
-        FileSystemTimeseriesStore resultStore = new FileSystemTimeseriesStore(context.getFileSystem().getPath("metrix_results_" + UUID.randomUUID()));
+        FileSystemTimeSeriesStore resultStore = new FileSystemTimeSeriesStore(context.getFileSystem().getPath("metrix_results_" + UUID.randomUUID()));
+        DataTableStore dataTableStore = new DataTableStore();
 
         try (ZipOutputStream logArchive = createLogArchive(line, context, versions)) {
-            MetrixRunParameters runParameters = new MetrixRunParameters(firstVariant, variantCount, versions, chunkSize, ignoreLimits, ignoreEmptyFilter, false);
-            ComputationRange computationRange = new ComputationRange(runParameters.getVersions(), runParameters.getFirstVariant(), runParameters.getVariantCount());
-            MetrixAnalysis metrixAnalysis = new MetrixAnalysis(networkSource, mappingReader, metrixDslReader, remedialActionsReaderForAnalysis,
-                    store, logger, computationRange);
-            MetrixAnalysisResult analysisResult = metrixAnalysis.runAnalysis();
-            new Metrix(contingenciesProvider, remedialActionsReaderForRun,
-                    store, resultStore, logArchive, context.getLongTimeExecutionComputationManager(), logger, analysisResult)
-                    .run(runParameters, new CsvResultListener(csvResultFilePath, resultStore, stopwatch, context));
+            ComputationRange computationRange = new ComputationRange(versions, firstVariant, variantCount);
+            MetrixRunParameters runParameters = new MetrixRunParameters(computationRange, chunkSize, ignoreLimits, ignoreEmptyFilter, false, false, false);
+            TimeSeriesDslLoader timeSeriesDslLoader = new TimeSeriesDslLoader(mappingReader);
+            MetrixAnalysis metrixAnalysis = new MetrixAnalysis(networkSource, timeSeriesDslLoader, metrixDslReader, remedialActionsReaderForAnalysis, contingenciesProvider,
+                    store, dataTableStore, logger, computationRange);
+            MetrixAnalysisResult analysisResult = metrixAnalysis.runAnalysis("extern tool");
+            new Metrix(remedialActionsReaderForRun, store, resultStore, logArchive, context, logger, analysisResult)
+                    .run(runParameters, new CsvResultListener(csvResultFilePath, resultStore, stopwatch, context), null);
 
         } catch (IOException e) {
             throw new UncheckedIOException(e);
@@ -315,7 +340,7 @@ public class MetrixTool implements Tool {
                 Stopwatch networkLoadingStopwatch = Stopwatch.createStarted();
                 logger.tagged("info").log("Loading case ...");
 
-                Network network = Importers.loadNetwork(caseFile, context.getShortTimeExecutionComputationManager(), ImportConfig.load(), null);
+                Network network = Network.read(caseFile, context.getShortTimeExecutionComputationManager(), ImportConfig.load(), null);
 
                 networkLoadingStopwatch.stop();
                 logger.tagged("performance").log("Case loaded in %d ms", networkLoadingStopwatch.elapsed(TimeUnit.MILLISECONDS));
